// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentReportSummary render Reflow UI is disabled 1`] = `
<div
  className="assessment-report-summary"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "pass",
        "incomplete",
        "fail",
      ]
    }
    countSuffix="%"
  />
  <h3
    className="test-details-text"
  >
    Test details
  </h3>
  <FlaggedComponent
    disableJSXElement={
      <AssessmentSummaryDetails
        testSummaries={Array []}
      />
    }
    enableJSXElement={
      <ReflowAssessmentSummaryDetails
        testSummaries={Array []}
      />
    }
    featureFlag="exportReportOptions"
    featureFlagStoreData={
      Object {
        "reflowUI": false,
      }
    }
  />
</div>
`;

exports[`AssessmentReportSummary render Reflow UI is enabled 1`] = `
<div
  className="assessment-report-summary"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "pass",
        "incomplete",
        "fail",
      ]
    }
    countSuffix="%"
  />
  <h3
    className="test-details-text"
  >
    Test details
  </h3>
  <FlaggedComponent
    disableJSXElement={
      <AssessmentSummaryDetails
        testSummaries={Array []}
      />
    }
    enableJSXElement={
      <ReflowAssessmentSummaryDetails
        testSummaries={Array []}
      />
    }
    featureFlag="exportReportOptions"
    featureFlagStoreData={
      Object {
        "reflowUI": true,
      }
    }
  />
</div>
`;
